--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
 		</style>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="B&W" style="height: 9000px">
+	<body data-sveltekit-preload-data="hover" data-theme="B&W">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
