--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cantata+One:ital@0;1&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 			rel="stylesheet"
@@ -12,7 +13,6 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>R E F R ▲ C T</title>
 		<style>
-			html,
 			body {
 				overflow-x: hidden;
 				overflow-y: auto;
