--- a/src/app.html
+++ b/src/app.html
@@ -37,6 +37,7 @@
 		</style>
 		%sveltekit.head%
 	</head>
+	<!-- please work github actions PLEASE -->
 	<body data-sveltekit-preload-data="hover" data-theme="B&W">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
