Added meta tags.

--- a/src/app.html
+++ b/src/app.html
@@ -27,6 +27,25 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width" />
+		<meta name="title" content="REFRACT by shef3r & p3rid0t">
+		<meta name="description" content="We're a team of developers and designers, trying to shine some light on the tech world.">
+		<meta name="keywords" content="design, designer, designing, figma, developer, develop, software, engineer, projects, github, oss, foss, svelte, flutter, html, css, js, team">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
+		<meta name="author" content="shef3r and p3rid0t">
+		<meta name="og:title" content="REFRACT by shef3r & p3rid0t">
+		<meta name="og:description" content="We're a team of developers and designers, trying to shine some light on the tech world.">
+		<meta name="og:keywords" content="design, designer, designing, figma, developer, develop, software, engineer, projects, github, oss, foss, svelte, flutter, html, css, js, team">
+		<meta name="og:robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="og:language" content="English">
+		<meta name="og:author" content="shef3r and p3rid0t">
+		<meta name="og:image" content="%sveltekit.assets%/banner.png">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="R E F R A C T">
+		<meta name="twitter:description" content="by shef3r and p3rid0t: passionate designers and developers.">
+		<meta name="twitter:image" content="%sveltekit.assets%/banner.png">
 		<title>R E F R ▲ C T</title>
 		<style>
 			body {
