--- a/src/app.html
+++ b/src/app.html
@@ -41,11 +41,11 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="og:language" content="English">
 		<meta name="og:author" content="shef3r and p3rid0t">
-		<meta name="og:image" content="%sveltekit.assets%/banner.png">
+		<meta name="og:image" content="/banner.png">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="R E F R A C T">
-		<meta name="twitter:description" content="by shef3r and p3rid0t: passionate designers and developers.">
-		<meta name="twitter:image" content="%sveltekit.assets%/banner.png">
+		<meta name="twitter:description" content="by shef3r, p3rid0t & friends: passionate designers and developers.">
+		<meta name="twitter:image" content="/banner.png">
 		<title>R E F R ▲ C T</title>
 		<style>
 			body {
